Update CMakeLists to install into python venv directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,13 @@ project(AlphaZeroPlusPlus)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# add the game library
-add_library(game_lib game_library/game.cpp)
-
-# add the executable
-add_executable(game_main game_library/main.cpp)
-
-target_link_libraries(game_main PUBLIC game_lib)
-
 # python bindings using pybind
-set(SYSTEM ON)
 add_subdirectory(pybind11)
-pybind11_add_module(game game_library/game_bindings.cpp)
-target_link_libraries(game PUBLIC game_lib)
+add_subdirectory(game_library)
+
+# Set the install prefix to the site-packages directory of the virtual environment
+# Calculate the absolute path to the virtual environment
+get_filename_component(VENV_PATH "${CMAKE_SOURCE_DIR}/venv" ABSOLUTE)
+set(CMAKE_INSTALL_PREFIX "${VENV_PATH}/lib/python3.11/site-packages")
+
+install(TARGETS game LIBRARY DESTINATION .)
